Fix margin on smaller screens for videos

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -98,7 +98,7 @@
   .site-main .about-area {
     padding: 0;
   }
-  #downloadResumeButton {
-    margin-bottom: 50px;
+  .video-slider {
+    margin-top: 50px !important;
   }
 }
